--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: sixhour
 on:
   schedule:
-    - cron: '37 */8 * * *'
+    - cron: '8 8,16,24 * * *'
 jobs:
   build:
     runs-on: windows-latest
